fix dark mode for form (#4311)

--- a/app/assets/stylesheets/css/components/input.css
+++ b/app/assets/stylesheets/css/components/input.css
@@ -30,7 +30,7 @@
   }
 
   tags.tagify {
-    @apply overflow-visible whitespace-normal p-2 text-clip;
+    @apply overflow-visible whitespace-normal px-2 text-clip;
   }
 
   textarea,
