--- a/app/assets/stylesheets/css/fields/key_value.css
+++ b/app/assets/stylesheets/css/fields/key_value.css
@@ -23,7 +23,7 @@
 }
 
 .key-value__header-cell {
-  @apply px-3 py-2;
+  @apply px-3;
 }
 
 .key-value__header-cell--key {
